--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.20.1",
     "@google/genai": "^1.27.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
+    "npm": "^11.6.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
